# micro-agent

./: .gitignore  README.md  pyproject.toml  run.py
agent/: agi.py  prompts.py
src/micro_agent/: __main__.py  agi.py  utils.py
