[tool.poetry]
name = "micro-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{ include="micro_agent", from="src" },
]

[tool.poetry.scripts]
micro-agent = "micro_agent.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
